--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,15 @@
     left: 8px;
     transition: left 350ms;
 }
+.certificate-form{
+    box-shadow: 0px 3px 9px 0px #BCB4B326;
+
+}
+
+select:required:invalid {
+    color: #333438;
+    opacity: 40%;
+}
 
 @keyframes hideButton {
     from {
@@ -71,4 +80,29 @@
 }
 .filtered:hover{
     filter: grayscale(0);
+}
+.certificate-form{
+
+}
+@keyframes showVerifyModal {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+.verify-modal{
+    transition: showVerifyModal 350ms;
+}
+
+@media screen and (max-width: 1023px) {
+    .input-error{
+        border:1px solid #EF061D;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .form-error{
+        border:1px solid #EF061D;
+    }
 }
