--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,8 @@
     left: 8px;
     transition: left 350ms;
 }
-.certificate-form{
+
+.certificate-form {
     box-shadow: 0px 3px 9px 0px #BCB4B326;
 
 }
@@ -45,10 +46,10 @@ select:required:invalid {
     0% {
         transform: translateY(0px);
     }
-    80%{
+    80% {
         transform: translateY(-342px);
     }
-    100%{
+    100% {
         transform: translateY(-335px);
     }
 }
@@ -75,15 +76,21 @@ select:required:invalid {
     animation: hideForm 800ms ease-out;
     animation-fill-mode: both;
 }
-.filtered{
-    filter: grayscale(100%);
+
+.filtered {
+    transition-duration: 300ms;
 }
-.filtered:hover{
-    filter: grayscale(0);
+
+.filtered:hover {
+    transition: background-color 300ms;
+    transition-delay: 50ms;
+    background-color: #2670DF;
 }
-.certificate-form{
+
+.certificate-form {
 
 }
+
 @keyframes showVerifyModal {
     from {
         transform: scale(0);
@@ -92,17 +99,34 @@ select:required:invalid {
         transform: scale(1);
     }
 }
-.verify-modal{
+
+.verify-modal {
     transition: showVerifyModal 350ms;
 }
 
-@media screen and (max-width: 1023px) {
-    .input-error{
-        border:1px solid #EF061D;
+@keyframes showModal {
+    from {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
     }
 }
+
+.modal {
+    transition: showModal 2s;
+    transition-duration: 350ms;
+    transition-delay: 300ms;
+}
+
+@media screen and (max-width: 1023px) {
+    .input-error {
+        border: 1px solid #EF061D;
+    }
+}
+
 @media screen and (min-width: 1024px) {
-    .form-error{
-        border:1px solid #EF061D;
+    .form-error {
+        border: 1px solid #EF061D;
     }
 }
