--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html{
+@font-face {
+    font-family: 'Neue Montreal';
+    src: url("./assets/fonts/NeueMontreal-Bold.woff2");
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'Neue Montreal';
+    src: url("./assets/fonts/NeueMontreal-Medium.woff2");
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'Neue Montreal';
+    src: url("./assets/fonts/NeueMontreal-Light.woff2");
+    font-weight: 300;
+}
+
+@font-face {
+    font-family: 'Matter';
+    src: url("./assets/fonts/Matter-Regular.woff2");
+    font-weight: 400;
+}
+
+html {
     scroll-behavior: smooth;
 }
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -203,6 +228,7 @@ select:required:invalid {
         word-wrap: break-word;
     }
 }
+
 .box {
     width: 1px;
     opacity: 0;
@@ -212,4 +238,40 @@ select:required:invalid {
 .box.in-view {
     width: 48px;
     opacity: 1;
+}
+
+.post img {
+    margin: 64px 0;
+}
+
+.post h2, .post p {
+    margin-bottom: 40px;
+    padding: 0;
+}
+
+.post p {
+    font-family: 'Matter', serif;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 140%;
+    letter-spacing: 1.5%;
+    text-align: left;
+    color: #313235;
+}
+
+.post a {
+    text-decoration: underline;
+    color: #E23F27;
+}
+
+.post h2 {
+    font-family: 'Neue Montreal', serif;
+    color: #0E0E10;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 120%;
+}
+
+.post br {
+    display: none;
 }
